monitoring/base/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - kiali.local
  gateways:
  - istio-ingress/http-ingress-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        subset: ""
        port:
          number: 20001
